assets/css/style.css
/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* Content wrapper */
html,
body {
    height: 100%;
    margin: 0;
}

body {
    min-height: 100vh;
    min-width: 100vh;
    background-color: #12181f;
    color: #EDEDED;
}

header {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    color: #EDEDED;
}

header img {
    width: 52%;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    color: #EDEDED
}

h1 {
    font-weight: 700;
    font-size: xx-large;
}

p {
    font-size: x-large;
    font-weight: bold;
    margin-top: 2rem;
    margin-bottom: 2rem;
}

img {
    width: auto;
    height: auto;
}

.actions {
    display: flex;
    flex-direction: column;
}

/* Buttons class */
.actions button {
    padding: 0.7rem 3rem;
    border-radius: 0.8rem;
    background-color: #D32F2F;
    color: #ffffff;
    margin-bottom: 1rem;
}

/* The Modal (background) */
.window {
    /* Hidden */
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    /* Scroll feature */
    overflow: auto;
    background-color: rgb(0, 0, 0);
    background-color: rgba(0, 0, 0, 0.4);
}

/* Window Content */
.window-content {
    color: #ffffff;
    background-color: #333;
    /* Centered */
    margin: 15% auto;
    padding: 20px;
    border: 1px solid #888;
    width: 50%;
}

/* Close Button */
.close-window {
    color: #aaa;
    float: right;
    font-size: 28px;
    font-weight: bold;
    cursor: pointer;
}

.close-window:hover,
.close-window:focus  {
    color: #D32F2F;
    text-decoration: none;
}

#nameModal button {
    padding: 0.7rem 3rem;
    border-radius: 0.8rem;
    background-color: #D32F2F;
    color: #ffffff;
    margin-bottom: 1rem;
}

#nameModal input {
    font-size: large;
}

#instructions ul {
    font-size: 1.5rem;
    text-align: justify;
}

.time-score-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    margin: auto;
    box-sizing: border-box;
}

.timer,
.scores,
label,
#sliderValue {
    margin: 0 10px;
    white-space: nowrap;
}

input[type="range"] {
    width: 100px;
}

label[for="musicSlider"] {
    margin-right: 5px;
    font-size: 2rem;
}

.cards {
    display: grid;
    grid-gap: 1rem;
    grid-template-columns: repeat(6, 110px);
    grid-template-rows: repeat(2, calc(105px /2 * 3));
}

/* https://www.w3schools.com/cssref/pr_background-image.php */
.card {
    display: grid;
    justify-content: center;
    height: 165px;
    width: 120px;
    background-image: url(../images/cards/card.webp);
    background-size: cover;
    border-radius: 0.5rem;
    cursor: pointer;
    transition: 0.3s all ease;
}

.card:hover {
    transform: scale(1.03);
}

/* Pokemon card image */
.card img {
    height: 165px;
    width: 120px;
    border-radius: 10px;
    opacity: 0;
    transition: 0.3s all ease;

}

/* Show card */
.card.clicked img,
.card.checked img {
    opacity: 1;
}

.card.shake {
    animation: shake 0.5s;
}

/* Shake animation */
@keyframes shake {
    0% {
        transform: translateX(0px);
    }

    25% {
        transform: translateX(-5px);
    }

    50% {
        transform: translateX(5px);
    }

    75% {
        transform: translateX(-5px);
    }

    100% {
        transform: translateX(0px);
    }
}

#button-container {
    display: flex;
    justify-content: space-between;
    margin-top: 2rem;
}

#button-container button {
    padding: 0.7rem 3rem;
    border-radius: 0.8rem;
    background-color: #D32F2F;
    color: #ffffff;
    margin-bottom: 1rem;
}

/* not working: https://inclusive-components.design/cards/ */
.card:focus {
    outline: 2px solid #D32F2F;
    background-color: #D32F2F;
    border: 3px solid;
    transform: scale(1.1);
    box-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.high-scores {
    margin-top: 20px;
    text-align: center;
}

#highScoreList {
    list-style-type: none;
    padding: 0;
}

.play-again-button {
    display: flex;
    justify-content: center;
}

.play-again-button button {
    padding: 0.7rem 3rem;
    font-size: large;
    border-radius: 0.8rem;
    background-color: #D32F2F;
    color: #ffffff;
    margin-bottom: 1rem;
}

/* Media query for extra small devices (phones, less than 768px) */
@media only screen and (max-width: 767px) {

    h1,
    h2,
    p {
        font-size: 1.2rem;
    }

    header {
        padding: 1rem 0.5rem;
    }

    #instructions ul {
        font-size: 1rem;
    }

    .cards {
        grid-template-columns: repeat(3, 1fr);
        grid-gap: 1.5rem;
    }

    .actions button,
    #nameModal button,
    #button-container button,
    .play-again-button button {
        /* smaller buttons */
        padding: 10px 20px;
        font-size: medium;
    }

    .window-content {
        width: 80%;
    }

    label[for="musicSlider"] {
        font-size: 1.2rem;
    }
}

/* Media query: larger screens laptops and tables (769px and up) */
@media screen and (min-width: 769px) {

    h1,
    h2,
    p, 
    label {
        font-size: 1.5rem;
    }


    header {
        padding: 1rem 1rem;
    }

    .window-content {
        width: 75%;
    }
}

/* Media query: larger devices (992px and up) */
@media screen and (min-width: 992px) {

    h1,
    h2,
    p, 
    label {
        font-size: 1.8rem;
    }

    .actions button, 
    #nameModal button, 
    #button-container button, 
    .play-again-button button {
        padding: 0.8rem 3.5rem;
        font-size: larger;
    }

    .window-content {
        width: 70%;
    }

    .cards {
        grid-gap: 1.5rem;
    }

    input[type="range"] {
        width: 120px;
    }
    
    label[for="musicSlider"] {
        font-size: 1.8rem;
    }
}

/* Media query: larger screen devices (1200px and up) */
@media screen and (min-width: 1200px) {

    h1,
    h2,
    p, 
    label {
        font-size: 2rem;
    }

    .actions button, 
    #nameModal button, 
    #button-container button, 
    .play-again-button button {
        margin-top: 0.5rem;
        font-size: x-large;
    }

    .window-content {
        width: 65%; 
    }

    .cards {
        grid-template-columns: repeat(9, 1fr);
    }

    .card {
        height: 170px;
        width: 120px;
    }

    .card img {
        height: 170px;
        width: 120px;
    }

    input[type="range"] {
        width: 150px;
    }

    label[for="musicSlider"] {
        font-size: 2rem;
    }
}

